# dvijok

./: CMakeLists.txt  main.cpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: CMakeLists.txt  main.cpp  main2.cpp
tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main2
tmp/glfw/: Makefile  cmake_install.cmake
tmp/glfw/src/: Makefile  cmake_install.cmake
tmp/lib/glad/: Makefile  cmake_install.cmake
tmp/lib/glfw/: Makefile  cmake_install.cmake
tmp/lib/glfw/src/: Makefile  cmake_install.cmake
tmp/src/: Makefile  cmake_install.cmake  main
